refactor: update settings file, update django files (1.10)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ web:
   env_file: .env
   environment:
     DEBUG: 'true'
-  command: /usr/local/bin/gunicorn docker_django.wsgi:application -w 2 -b :8000
+  command: /usr/local/bin/gunicorn project.wsgi:application -w 2 -b :8000
 
 nginx:
   restart: always
@@ -31,3 +31,4 @@ postgres:
     - "5432:5432"
   volumes:
     - pgdata:/var/lib/postgresql/data/
+
