feat: update docker-compose production file

--- a/production.yml
+++ b/production.yml
@@ -6,7 +6,7 @@ web:
   links:
     - postgres:postgres
   env_file: .env
-  command: /usr/local/bin/gunicorn docker_django.wsgi:application -w 2 -b :8000
+  command: /usr/local/bin/gunicorn project.wsgi:application -w 2 -b :8000
 
 nginx:
   restart: always
